<resources>
    <string name="app_name">RentalCar</string>
    <string name="welcome">Welcome</string>
    <string name="managerTxt">Manager</string>
    <string name="btnAddEditCat">Add/Edit Category</string>
    <string name="btnAddEditCar">Add/Edit Car</string>
    <string name="SignUp">Sign Up</string>
    <string name="login">Log In</string>
    <string name="txtCategory">Category</string>
    <string name="btnAddnewCat">Add New Category</string>
    <string name="txtSelectCatEdit">Select a Category to Edit</string>
    <string name="btnEdit">Edit</string>
    <string name="txtCategoryName">Category Name</string>
    <string name="txtPriceHr">Price/Hr</string>
    <string name="txtPriceDay">Price/Day</string>
    <string name="txtFeatures">Features</string>
    <string name="btnUpdateCat">Update Category</string>
    <string name="btnDeleteCat">Delete Category</string>
    <string name="txtEditCategory">Edit Category</string>
    <string name="txtAddCategory">Add New Category</string>
    <string name="btnAddCategory">Add Category</string>
    <string name="txtCarInventory">Car Inventory</string>
    <string name="btnAddCar">Add New Car</string>
    <string name="txtAddNewCar">Add New Car</string>
    <string name="txtCarModel">Model</string>
    <string name="txtCarMaker">Make</string>
    <string name="txtCarBrand">Maker</string>
    <string name="txtCarYear">Year</string>
    <string name="txtCarSeats">Seats</string>
    <string name="txtCarMillage">Millage</string>
    <string name="txtCarColor">Color</string>
    <string name="txtDatePurchase">Purchase Date</string>
    <string name="txtCarStatus">Status</string>
    <string name="txtSales">Sales</string>
    <string name="btnCreateRent">Create a Rent</string>
    <string name="btnFindReservation">Find Reservation</string>
    <string name="btnReturnCar">Return a Car</string>
    <string name="txtSelectTime">Select Duration of Rental</string>
    <string name="txtSelectStartDate">Select Start Date/Time</string>
    <string name="btncontinue">Continue</string>
    <string name="txtSelectCar">Select Car</string>
    <string name="txtSelectEndDate">Select End Date/Time</string>
    <string name="txtStartDate">Start Date</string>
    <string name="txtEndDate">End Date</string>
    <string name="txtRentalSummary">Rental Summary</string>
    <string name="txtDriverInfo">Driver Information</string>
    <string name="txtSearchDrive">Search Driver</string>
    <string name="txtSearch">Search</string>
    <string name="btnCreateUser">Create New User</string>
    <string name="txtName">Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtPhone">Phone</string>
    <string name="txtAddress">Address</string>
    <string name="txtDriverLicense">Driver License</string>
    <string name="btnUpdateInformation">Update Information</string>
    <string name="imgCar">Car</string>

    <string name="txtFindReservation">Find Reservation</string>
    <string name="txtReservationNum">Reservation #</string>
    <string name="btnSearch">Search</string>
    <string name="txtDriverName">Driver Name</string>
    <string name="txtTotal">Total</string>
    <string name="txtSafetyDeposit">Safety Deposit</string>
    <string name="txtDeposit">Deposit</string>
    <string name="txtPrice">Price</string>
    <string name="btnReserve">Reserve</string>
    <string name="txtTotalSummary">Total Summary</string>

    <string name="txtSignUpUserid">Username:</string>
    <string name="txtSignUpName">Name:</string>
    <string name="txtSignUpTitle2">Sign Up</string>
    <string name="txtSignUpEmail">Email:</string>
    <string name="txtSignUpPhone">Phone:</string>
    <string name="txtSignUpAddress">Address:</string>
    <string name="txtSignUpLicense">License:</string>
    <string name="txtSignUpPassword">Password:</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtSignUpConfPwd">Confirm:</string>

    <string name="txtUpdUserid">Username:</string>
    <string name="txtUpdName">Name:</string>
    <string name="txtUpdTitle2">Sign Up</string>
    <string name="txtUpdEmail">Email:</string>
    <string name="txtUpdPhone">Phone:</string>
    <string name="txtUpdAddress">Address:</string>
    <string name="txtUpdLicense">License:</string>
    <string name="txtUpdPassword">Password:</string>
    <string name="txtUpdConfPwd">Confirm:</string>
    <string name="btnUpdate">Update Data</string>
    <string name="btnLogIn">Log In</string>
    <string name="txtLicensePlate">License Plate</string>
    <string name="txtEditCar">Edit Car</string>
    <string name="btnEditCar">Update</string>
    <string name="btnDeleteCar">Delete</string>
    <string name="txtTotalDays">Total Days</string>

    <string-array name="status_array">
        <item>Waiting Arrival</item>
        <item>Rented</item>
        <item>Available</item>
        <item>On Service</item>
    </string-array>

    <string-array name="category_array">
        <item>Sedan</item>
        <item>Compact</item>
        <item>PickUp</item>
    </string-array>


</resources>
